--- a/1-Ramp_Up/Python/1-Basics/Practica/Ejercicios_Basics_I.ipynb
+++ b/1-Ramp_Up/Python/1-Basics/Practica/Ejercicios_Basics_I.ipynb
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¿Por qué esta magnífica tecnología científica,\n",
+      "Por qué esta magnífica tecnología científica,\n",
       "\tque ahorra trabajo y nos hace la vida más fácil,\n",
       "\t\tnos aporta tan poca felicidad?\n",
       "\t\t\tLa respuesta está, simplemente: porque aún no hemos aprendido a usarla con tino.\n",
@@ -42,7 +42,8 @@
     }
    ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "# AQUÍ VA TU CÓDIGO\n",
+    "print(\"Por qué esta magnífica tecnología científica,\\n\\tque ahorra trabajo y nos hace la vida más fácil,\\n\\t\\tnos aporta tan poca felicidad?\\n\\t\\t\\tLa respuesta está, simplemente: porque aún no hemos aprendido a usarla con tino.\\n\\\"Albert Einstein\\\"\")"
    ]
   },
   {
@@ -61,11 +62,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avenida Madariaga 45 Bilbao 48014\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "calle = \"Avenida Madariaga\"\n",
+    "numero = 45\n",
+    "ciudad = \"Bilbao\"\n",
+    "codigo_postal = \"48014\"\n",
+    "print(F\"{calle} {numero} {ciudad} {codigo_postal}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avenida Madariaga 45 Bilbao 48014\n"
+     ]
+    }
+   ],
+   "source": [
+    "direccion = F\"{calle} {numero} {ciudad} {codigo_postal}\"\n",
+    "print(direccion)"
    ]
   },
   {
@@ -78,11 +109,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avenida Madariaga 45 Bilbao 48014\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "calle = input(\"Nombre de calle: \")\n",
+    "numero = input(\"Número: \")\n",
+    "ciudad = input(\"Población: \")\n",
+    "codigo_postal = input(\"CP: \")\n",
+    "direccion = F\"{calle} {numero} {ciudad} {codigo_postal}\"\n",
+    "print(direccion)\n"
    ]
   },
   {
@@ -108,18 +152,18 @@
    "source": [
     "Tus respuestas:\n",
     "\n",
-    "1. ...\n",
-    "2. ...\n",
-    "3. ...\n",
-    "4. ...\n",
-    "5. ...\n",
-    "6. ...\n",
-    "7. ..."
+    "1. Correcto.\n",
+    "2. Mal. El string es incorrecto porque no tiene la comilla doble de cierre\n",
+    "3. Mal. True es una palabra reservada.\n",
+    "4. Mal. Hay un espacio en el nombre de la variable.\n",
+    "5. Mal. El import es una palabra reservada.\n",
+    "6. Mal. Los nombres de las variables no pueden iniciarse con un caracter numérico.\n",
+    "7. Correcto"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,11 +236,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los grados en farenheit son 97.7\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "celsius = float(input('Introduce la temperatura en grados celsius:'))\n",
+    "farenheit = (celsius * 9/5) + 32\n",
+    "print(F\"Los grados en farenheit son {farenheit}\")"
    ]
   },
   {
@@ -209,17 +263,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los grados en farenheit son 41.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA TU CÓDIGO"
+    "\"\"\"\n",
+    "This\n",
+    "is\n",
+    "a\n",
+    "multiline\n",
+    "comment\n",
+    "\"\"\"\n",
+    "celsius = float(input('Introduce la temperatura en grados celsius:')) #Get celsius degrees\n",
+    "farenheit = (celsius * 9/5) + 32 #Convert celsius degrees to farenheit degrees\n",
+    "print(F\"Los grados en farenheit son {farenheit}\") #Print farenheit degrees."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -273,11 +344,6 @@
     "_Feature"
    ],
    "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
   }
  },
  "nbformat": 4,
