--- a/1-Ramp_Up/Markdown/Practica/Ejerciciosmarkdown.ipynb
+++ b/1-Ramp_Up/Markdown/Practica/Ejerciciosmarkdown.ipynb
@@ -25,7 +25,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... AQUÍ VA VUESTRO MARKDOWN ..."
+    "## Aptitudes de Data Scientist\n",
+    "\n",
+    ">### Lo más importante\n",
+    ">- Matemáticas\n",
+    ">- Python\n",
+    ">- SQL\n",
+    ">\n",
+    ">![python icon](./img/python.png)\n",
+    ">\n",
+    ">Otro tema importante es el *Business Intelligence*\n",
+    ">\n",
+    ">Si tienes dudas, puedes escribirme a: miguel.nievas@thebridgeschool.es\n",
+    ">\n",
+    ">En esta página se aprende mucho de machine learning: [página con ML](https://www.kaggle.com/)"
    ]
   },
   {
@@ -48,7 +61,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "... AQUI VA VUESTRO MARKDOWN ..."
+    "\n",
+    "|Ramp up|Data Analysis|Machine Learning|Data && Business|\n",
+    "|-------|-------------|----------------|----------------|\n",
+    "|Python|EDA|Supervised|Productivización|\n",
+    "|Estadística|R|Non supervised|Storytelling|\n",
+    "|SQL|Feat. Eng.|Deep learning|API|\n",
+    "\n",
+    "$ \\sqrt{3{x}-1} + (1+{x})^2 $\n",
+    "\n",
+    "\n"
    ]
   }
  ],
