Ejercicios Flujos de Control

--- a/1-Ramp_Up/Python/2-Flujos de control/Practica/Ejercicios_Flujos_Control.ipynb
+++ b/1-Ramp_Up/Python/2-Flujos de control/Practica/Ejercicios_Flujos_Control.ipynb
@@ -32,9 +32,44 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transporte o error\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "\"\"\"\n",
+    "Suponemos que se va a meter la hora con el formato HH:mm\n",
+    "Por ejemplo: 09:35\n",
+    "Si no se mete la hora en ese formato muestra un error.\n",
+    "\"\"\"\n",
+    "hora_dia = input('Hora del día') #obtener la hora del día\n",
+    "partes = hora_dia.split(\":\")\n",
+    "if (len(partes)!=2):\n",
+    "    print(\"Formato de hora erroneo\")\n",
+    "elif (\n",
+    "    #comprobar si las horas no son correctas\n",
+    "    not partes[0].isdigit() or len(partes[0])!=2 or int(partes[0]) < 0 or int(partes[0]) > 23\n",
+    "    #comporbar si los minutos no son correctos\n",
+    "    or not partes[1].isdigit() or len(partes[1])!=2 or int(partes[1]) < 0 or int(partes[1]) > 59\n",
+    "    ):\n",
+    "    print(\"Formato de hora erroneo\")\n",
+    "else:\n",
+    "    if hora_dia >=\"00:00\" and hora_dia<=\"08:00\":\n",
+    "        print(\"Durmiendo\")\n",
+    "    elif hora_dia >= \"09:00\" and hora_dia <= \"18:00\":\n",
+    "        print(\"Trabajando\")\n",
+    "    elif hora_dia >= \"19:00\" and hora_dia <= \"21:00\":\n",
+    "        print(\"Clase\")\n",
+    "    elif hora_dia >= \"22:00\" and hora_dia < \"24:00\":\n",
+    "        print(\"Descando\")\n",
+    "    else:\n",
+    "        print(\"Transporte o error\")\n",
+    "    \n"
    ]
   },
   {
@@ -58,11 +93,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El precio es 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "distrito = input(\"Distrito\")\n",
+    "superficie = float(input(\"Superficie\"))\n",
+    "precio = 0\n",
+    "if (distrito==\"Moncloa\" or distrito==\"Centro\") and superficie > 100: \n",
+    "    precio = 1000\n",
+    "elif distrito==\"Salamanca\" and superficie>=150:\n",
+    "    precio = 1500\n",
+    "elif distrito != \"Retiro\" and superficie>=60 and superficie <= 80:\n",
+    "    precio = 600\n",
+    "print(\"El precio es\", precio)\n",
+    "    "
    ]
   },
   {
@@ -80,11 +133,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distrito Retiro\n",
+      "Precio 1000\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "distrito = input(\"Distrito\")\n",
+    "if distrito==\"Retiro\":\n",
+    "    print(\"Distrito Retiro\")\n",
+    "    superficie = float(input(\"Superficie\"))\n",
+    "    if superficie > 100:\n",
+    "        print(\"Precio\", 1000)\n",
+    "    else:\n",
+    "        print(\"Precio\", 500)\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Otro distrito\")"
    ]
   },
   {
@@ -97,11 +169,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 x 20: 100\n",
+      "5 x 4: 20\n",
+      "5 x 7: 35\n",
+      "5 x 34: 170\n",
+      "5 x 77.8: 389.0\n",
+      "5 x 34: 170\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "numero = 5\n",
+    "lista = [20, 4, 7, 34, 77.8, 34]\n",
+    "for n in lista:\n",
+    "    print(f\"{numero} x {n}: {numero*n}\")"
    ]
   },
   {
@@ -114,11 +202,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10\n",
+      "-9\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "-3\n",
+      "-2\n",
+      "-1\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "for num in range(-10,0):\n",
+    "    print(num)"
    ]
   },
   {
@@ -137,9 +243,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "55\n",
+      "75\n",
+      "150\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
+    "for n in list1:\n",
+    "    if n > 150: #La condición  de salida se pon aquí si no queremos que imprima el número mayor a 150. Si quisieramos imprimrilo y salir, se podría tras la siguiente condición.\n",
+    "        break\n",
+    "    if n % 5 == 0:\n",
+    "        print(n)\n",
+    "    "
    ]
   },
   {
@@ -153,11 +276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "175\n",
+      "210\n",
+      "245\n",
+      "280\n",
+      "315\n",
+      "350\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "for n in range(150, 351):\n",
+    "    if (n % 5 ==0) and (n % 7 ==0):\n",
+    "        print(n)"
    ]
   },
   {
@@ -182,11 +320,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1\n",
+      "4 3 2 1\n",
+      "3 2 1\n",
+      "2 1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "result = []\n",
+    "for n in range(5,0,-1):\n",
+    "    line = []\n",
+    "    for j in range(n,0,-1):\n",
+    "        line.append(str(j))\n",
+    "    result.append(\" \".join(line))\n",
+    "    del line\n",
+    "print(\"\\n\".join(result))\n",
+    "del result\n",
+    "        "
    ]
   },
   {
@@ -206,17 +365,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You loose\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "import random\n",
+    "\n",
+    "numero = random.randint(1, 5)\n",
+    "vidas = 3\n",
+    "while vidas > 0:\n",
+    "    valor_usuario = int(input('Guess the number: '))\n",
+    "    if valor_usuario==numero:\n",
+    "        break\n",
+    "    else:\n",
+    "        vidas -= 1\n",
+    "if vidas > 0:\n",
+    "    print(\"You win\")\n",
+    "else:\n",
+    "    print(\"You loose\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -230,12 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
