Ejerciciosmarkdown: Center table and formula in Exercise 2

--- a/1-Ramp_Up/Markdown/Practica/Ejerciciosmarkdown.ipynb
+++ b/1-Ramp_Up/Markdown/Practica/Ejerciciosmarkdown.ipynb
@@ -61,6 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<center>\n",
     "\n",
     "|Ramp up|Data Analysis|Machine Learning|Data && Business|\n",
     "|-------|-------------|----------------|----------------|\n",
@@ -70,6 +71,7 @@
     "\n",
     "$ \\sqrt{3{x}-1} + (1+{x})^2 $\n",
     "\n",
+    "</center>\n",
     "\n"
    ]
   }
