Ejercicios_Flujos_Control: class variants

--- a/1-Ramp_Up/Python/1-Basics/Practica/Ejercicios_Basics_II.ipynb
+++ b/1-Ramp_Up/Python/1-Basics/Practica/Ejercicios_Basics_II.ipynb
@@ -440,7 +440,7 @@
 		},
 		{
 			"cell_type": "code",
-			"execution_count": 18,
+			"execution_count": null,
 			"metadata": {},
 			"outputs": [
 				{
@@ -449,19 +449,36 @@
 					"text": [
 						"En mayúsculas: LO PRIMERO DE TODO, CÓMO ESTÁN LOS MÁQUINAS\n",
 						"En minúsculas: lo primero de todo, cómo están los máquinas\n",
-						"Primera letra mayúscula: Lo Primero De Todo, Cómo Están Los Máquinas\n",
+						"Pasar a lista: ['Lo', 'primero', 'de', 'todo,', 'cómo', 'están', 'los', 'máquinas']\n",
+						"En minúsculas: lo primero de todo, cómo están los máquinas\n",
 						"Sustituir \",\" por \";\": Lo primero de todo; cómo están los máquinas\n",
 						"Eliminar las \"a\" minúsculas: Lo primero de todo, cómo estn los mquins\n"
 					]
+				},
+				{
+					"data": {
+						"text/plain": [
+							"'Lo primero de todo, cómo estn los mquinas'"
+						]
+					},
+					"execution_count": 3,
+					"metadata": {},
+					"output_type": "execute_result"
 				}
 			],
 			"source": [
 				"sentence = \"Lo primero de todo, cómo están los máquinas\"\n",
 				"print(f\"En mayúsculas: {sentence.upper()}\")\n",
 				"print(f\"En minúsculas: {sentence.lower()}\")\n",
-				"print(f\"Primera letra mayúscula: {sentence.title()}\")\n",
+				"print(f\"Pasar a lista:\", sentence.split(\" \"))\n",
+				"print(f\"En minúsculas: {sentence.lower()}\")\n",
 				"print(f\"Sustituir \\\",\\\" por \\\";\\\": {sentence.replace(',',';')}\")\n",
-				"print(f\"Eliminar las \\\"a\\\" minúsculas: {sentence.replace('a','').replace('á','')}\")"
+				"print(f\"Eliminar las \\\"a\\\" minúsculas: {sentence.replace('a','').replace('á','')}\")\n",
+				"\n",
+				"#********************************************************\n",
+				"#**********UTILIZAR MAS DE UN PATRION EN EL REPLACE *****\n",
+				"#********************************************************\n",
+				"sentence.replace('a' and \"á\",'')"
 			]
 		},
 		{
