--- a/1-Ramp_Up/Python/2-Flujos de control/Practica/Ejercicios_Flujos_Control.ipynb
+++ b/1-Ramp_Up/Python/2-Flujos de control/Practica/Ejercicios_Flujos_Control.ipynb
@@ -349,6 +349,55 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1\n",
+      "4 3 2 1\n",
+      "3 2 1\n",
+      "2 1\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = list(range(5,0,-1))\n",
+    "for i in range(len(lista)):\n",
+    "    #unpacking->separa los elementos de una lista y los pasamos como parametros a la función.\n",
+    "    print(*lista)\n",
+    "    del lista[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (5,0,-1):\n",
+    "    for j in range(i, 0, -1):\n",
+    "        print(j,  end=\" \")\n",
+    "    print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +439,39 @@
     "if vidas > 0:\n",
     "    print(\"You win\")\n",
     "else:\n",
-    "    print(\"You loose\")\n"
+    "    print(\"You lose\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You win\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "numero = random.randint(1, 5)\n",
+    "vidas = 3\n",
+    "while vidas > 0:\n",
+    "    try:\n",
+    "        valor_usuario = int(input('Guess the number: '))\n",
+    "        if valor_usuario==numero:\n",
+    "            print(\"You win\")\n",
+    "            break\n",
+    "        else:\n",
+    "            vidas -= 1\n",
+    "    except:\n",
+    "        print(\"Value must be an integer.\")\n",
+    "if vidas == 0:\n",
+    "    print(\"You lose\")"
    ]
   }
  ],
