--- a/1-Ramp_Up/Markdown/Practica/Ejerciciosmarkdown.ipynb
+++ b/1-Ramp_Up/Markdown/Practica/Ejerciciosmarkdown.ipynb
@@ -74,11 +74,30 @@
     "</center>\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "\n",
+    "|Ramp up|Data Analysis|Machine Learning|Data && Business|\n",
+    "|-------|-------------|----------------|----------------|\n",
+    "|Python|EDA|Supervised|Productivización|\n",
+    "|Estadística|R|Non supervised|Storytelling|\n",
+    "|SQL|Feat. Eng.|Deep learning|API|\n",
+    "\n",
+    "<center>\n",
+    "\n",
+    "$$\n",
+    "\\sqrt{3{x}-1} + (1+{x})^2 \n",
+    "$$"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -92,12 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
