--- a/1-Ramp_Up/Python/Repaso/Ejercicio de repaso - Ahorcado.ipynb
+++ b/1-Ramp_Up/Python/Repaso/Ejercicio de repaso - Ahorcado.ipynb
@@ -30,10 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Palabra: _ _ _ _ _ _\n"
+     ]
+    }
+   ],
+   "source": [
+    "palabra_adivinar = input(\"Introduce la palabra\")\n",
+    "# palabra_adivinar = \"Palabra\"l\n",
+    "resultado = list(\"_\"*len(palabra_adivinar))\n",
+    "print(\"Palabra:\", *resultado)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,8 +59,85 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_ _ _ _ _ _ _\n",
+      "No has introducido una letra\n",
+      "Has acertado la letra\n",
+      "Palabra: _ a _ a _ _ a\n",
+      "Has acertado la letra\n",
+      "Palabra: P a _ a _ _ a\n",
+      "No has acertado\n",
+      "Palabra: P a _ a _ _ a\n",
+      "Te quedan 9 vidas, vuelve a intentarlo\n",
+      "No has acertado\n",
+      "Palabra: P a _ a _ _ a\n",
+      "Te quedan 8 vidas, vuelve a intentarlo\n",
+      "No has acertado\n",
+      "Palabra: P a _ a _ _ a\n",
+      "Te quedan 7 vidas, vuelve a intentarlo\n",
+      "No has acertado\n",
+      "Palabra: P a _ a _ _ a\n",
+      "Te quedan 6 vidas, vuelve a intentarlo\n",
+      "No has acertado\n",
+      "Palabra: P a _ a _ _ a\n",
+      "Te quedan 5 vidas, vuelve a intentarlo\n",
+      "No has acertado\n",
+      "Palabra: P a _ a _ _ a\n",
+      "Te quedan 4 vidas, vuelve a intentarlo\n",
+      "Has acertado la letra\n",
+      "Palabra: P a l a _ _ a\n",
+      "Has acertado la letra\n",
+      "Palabra: P a l a b _ a\n",
+      "Has acertado la letra\n",
+      "¡¡FELILCIDADES!! Has acertado. La palabra era  Palabra\n"
+     ]
+    }
+   ],
+   "source": [
+    "palabra_min = palabra_adivinar.strip().lower()\n",
+    "vidas = 10\n",
+    "letras_introducidas = set()\n",
+    "while vidas > 0:\n",
+    "    letra_encontrada = False\n",
+    "    letra = input('Inroduce una letra').lower()\n",
+    "    if len(letra)>1:\n",
+    "        print(\"Solo puede introducir una letra\")\n",
+    "    elif letra < 'a' or letra > 'z':\n",
+    "        print(\"No has introducido una letra\")\n",
+    "    elif letra in letras_introducidas:\n",
+    "        print('Ya has introducido esa letra')\n",
+    "    else:\n",
+    "        letras_introducidas.add(letra)\n",
+    "        if letra in palabra_min:\n",
+    "            index = palabra_min.find(letra)\n",
+    "            while index >= 0:\n",
+    "                resultado[index]=palabra_adivinar[index]\n",
+    "                index = palabra_min.find(letra, index + 1)\n",
+    "            print(\"Has acertado la letra\")\n",
+    "            letra_encontrada=True\n",
+    "            del index\n",
+    "            \n",
+    "        else:\n",
+    "            print(\"No has acertado\")\n",
+    "            vidas -= 1\n",
+    "            \n",
+    "        if \"_\" in resultado:\n",
+    "            if (vidas >0 ):\n",
+    "                print(\"Palabra:\", *resultado)\n",
+    "                if not letra_encontrada: \n",
+    "                    print(F\"Te quedan {vidas} vidas, vuelve a intentarlo\")\n",
+    "                \n",
+    "            else:\n",
+    "                print(\"¡¡Ohhhh!! Has llegado al final de tus vidas\")\n",
+    "                print(\"La palabra buscada era\", palabra_adivinar)\n",
+    "        else:\n",
+    "            print(\"¡¡FELILCIDADES!! Has acertado. La palabra era \", palabra_adivinar)\n",
+    "            vidas = 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -80,14 +170,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.9"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
