--- a/1-Ramp_Up/Python/3-Colecciones/Practica/Ejercicios_Colecciones.ipynb
+++ b/1-Ramp_Up/Python/3-Colecciones/Practica/Ejercicios_Colecciones.ipynb
@@ -21,11 +21,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_1 = [1,2,3,4,5]\n",
+    "ejer_1.reverse()\n",
+    "ejer_1"
    ]
   },
   {
@@ -39,11 +52,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 9, 16, 25]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_1 = [1,2,3,4,5]\n",
+    "for pos, valor in enumerate(ejer_1):\n",
+    "    ejer_1[pos]=valor**2\n",
+    "ejer_1"
    ]
   },
   {
@@ -63,11 +90,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hola Que', 'Hola tal', 'amigo Que', 'amigo tal']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_3_1 = [\"Hola\", \"amigo\"]\n",
+    "ejer_3_2 = [\"Que\", \"tal\"]\n",
+    "output = []\n",
+    "for i in ejer_3_1:\n",
+    "    for j in ejer_3_2:\n",
+    "        output.append(' '.join([i,j]))\n",
+    "output"
    ]
   },
   {
@@ -82,11 +126,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 47, 19, 29, 0, 67, 78, 90]\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_4 = [20, 47, 19, 29, 45, 67, 78, 90]\n",
+    "try:\n",
+    "    pos = ejer_4.index(45)\n",
+    "    ejer_4[pos]=0\n",
+    "    print(ejer_4)\n",
+    "except:\n",
+    "    print(\"No se ha encontrado el valor\")"
    ]
   },
   {
@@ -102,11 +160,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_5 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
+    "ejer_5_2 = ejer_5.copy()\n",
+    "while 3 in ejer_5_2:\n",
+    "    pos = ejer_5_2.index(3)\n",
+    "    del ejer_5_2[pos]\n",
+    "print(ejer_5_2)"
    ]
   },
   {
@@ -126,11 +197,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Crea una tupla con 3 elementos\n",
+      "(5, 7, 8)\n",
+      "2. Crea otra tupla con un elemento y comprueba su tipo\n",
+      "<class 'tuple'>\n",
+      "3. Crea una tupla con elementos de diferentes tipos\n",
+      "('palabra', 6, True)\n",
+      "4. Imprime por pantalla el primer y último elemento de la tupla del apartado 3. Usa `len` para el último\n",
+      "Primer elemento: palabra\n",
+      "Ultimo elemento: True\n",
+      "5. Añade un elemento a la tupla del apartado 3.\n",
+      "('palabra', 6, True, 'Nuevo valor')\n",
+      "6. Eliminar un elemento de la tupla del apartado 5, que se encuentre más o menos en la mitad.\n",
+      "('palabra', 6, 'Nuevo valor')\n",
+      "7. Convierte la tupla del apartado 5 en una lista\n",
+      "['palabra', 6, True, 'Nuevo valor']\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "print(\"1. Crea una tupla con 3 elementos\")\n",
+    "tupla_1 = (5,7,8)\n",
+    "print(tupla_1)\n",
+    "\n",
+    "print(\"2. Crea otra tupla con un elemento y comprueba su tipo\")\n",
+    "tupla_2= (\"palabra\",)\n",
+    "print(type(tupla_2))\n",
+    "\n",
+    "print(\"3. Crea una tupla con elementos de diferentes tipos\")\n",
+    "tupla_3= (\"palabra\",6,True)\n",
+    "print(tupla_3)\n",
+    "\n",
+    "print(\"4. Imprime por pantalla el primer y último elemento de la tupla del apartado 3. Usa `len` para el último\")\n",
+    "print(\"Primer elemento:\", tupla_3[0])\n",
+    "print(\"Ultimo elemento:\", tupla_3[len(tupla_3)-1])\n",
+    "\n",
+    "print(\"5. Añade un elemento a la tupla del apartado 3.\")\n",
+    "tmp_list = list(tupla_3)\n",
+    "tmp_list.append(\"Nuevo valor\")\n",
+    "tupla_4 = tuple(tmp_list)\n",
+    "del tmp_list\n",
+    "print(tupla_4)\n",
+    "\n",
+    "print(\"6. Eliminar un elemento de la tupla del apartado 5, que se encuentre más o menos en la mitad.\")\n",
+    "tmp_list = list(tupla_4)\n",
+    "del tmp_list[int(len(tmp_list)/2)]\n",
+    "tupla_5=tuple(tmp_list)\n",
+    "print(tupla_5)\n",
+    "\n",
+    "print(\"7. Convierte la tupla del apartado 5 en una lista\")\n",
+    "print(list(tupla_4))\n",
+    "\n"
    ]
   },
   {
@@ -147,11 +271,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cien cañones por banda\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_7 = (\"cien\", \"cañones\", \"por\", \"banda\")\n",
+    "print(' '.join(ejer_7))"
    ]
   },
   {
@@ -165,11 +298,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "90\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_8 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3)\n",
+    "print(ejer_8[2])\n",
+    "print(ejer_8[-3])"
    ]
   },
   {
@@ -187,11 +331,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. ¿Cuántas veces se repite el 3 en la siguiente tupla?\n",
+      "7\n",
+      "2. Crea una tupla nueva con los elementos desde la posición 5 a la 10.\n",
+      "(19, 3, 29, 45, 67, 78)\n",
+      "3. ¿Cuántos elementos tiene la tupla `ejer_9`?\n",
+      "26\n",
+      "4. Comprueba si el numero 60 está en la tupla\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_9 = (3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7)\n",
+    "print(\"1. ¿Cuántas veces se repite el 3 en la siguiente tupla?\")\n",
+    "print(ejer_9.count(3))\n",
+    "\n",
+    "print(\"2. Crea una tupla nueva con los elementos desde la posición 5 a la 10.\")\n",
+    "ejer_9_2 = ejer_9[4:10]\n",
+    "print(ejer_9_2)\n",
+    "\n",
+    "print(\"3. ¿Cuántos elementos tiene la tupla `ejer_9`?\")\n",
+    "print(len(ejer_9))\n",
+    "\n",
+    "print(\"4. Comprueba si el numero 60 está en la tupla\")\n",
+    "print(60 in ejer_9)\n",
+    "print(ejer_9.count(60)>0)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -207,11 +382,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Convierte la tupla del ejercicio 9 en una lista\n",
+      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3, 5, 2, 4, 7, 9, 4, 2, 4, 3, 3, 4, 6, 7]\n",
+      "2. Convierte la tupla del ejercicio 9 en un set\n",
+      "{2, 3, 67, 5, 4, 7, 6, 9, 45, 78, 47, 19, 20, 90, 29}\n",
+      "3. Convierte la tupla del ejercicio 9 en un diccionario. Usa también los índices\n",
+      "{0: 3, 1: 20, 2: 3, 3: 47, 4: 19, 5: 3, 6: 29, 7: 45, 8: 67, 9: 78, 10: 90, 11: 3, 12: 3, 13: 5, 14: 2, 15: 4, 16: 7, 17: 9, 18: 4, 19: 2, 20: 4, 21: 3, 22: 3, 23: 4, 24: 6, 25: 7}\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "print(\"1. Convierte la tupla del ejercicio 9 en una lista\")\n",
+    "lista_10 = list(ejer_9)\n",
+    "print(lista_10)\n",
+    "\n",
+    "print(\"2. Convierte la tupla del ejercicio 9 en un set\")\n",
+    "set_10 = set(ejer_9)\n",
+    "print(set_10)\n",
+    "\n",
+    "print(\"3. Convierte la tupla del ejercicio 9 en un diccionario. Usa también los índices\")\n",
+    "dict_10 = dict(enumerate(ejer_9))\n",
+    "print(dict_10)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -227,11 +427,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x': 3, 'y': 2, 'z': 1}\n",
+      "{'x': 3, 'y': 2, 'z': 1}\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_11 = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
+    "\n",
+    "\"\"\"\n",
+    "Lo voy a hacer de dos dos formas.\n",
+    "1- conviertiendolo directamente con el constructor de diccionarios\n",
+    "2- usando un for para recorrer la tupla. \n",
+    "\"\"\"\n",
+    "\n",
+    "dict_11 = dict(ejer_11)\n",
+    "print(dict_11)\n",
+    "\n",
+    "dict_11 = dict()\n",
+    "for tmp_tuple in ejer_11:\n",
+    "    dict_11[tmp_tuple[0]]=tmp_tuple[1]\n",
+    "print(dict_11)    \n"
    ]
   },
   {
@@ -250,11 +473,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Crea una lista ordenada ascendente con las claves del diccionario\n",
+      "[2, 4, 5, 8]\n",
+      "2. Crea otra lista ordenada descendente con los valores\n",
+      "[234, 98, 78, 29]\n",
+      "3. Añade una nueva clave/valor\n",
+      "{4: 78, 2: 98, 8: 234, 5: 29, 'nueva_clave': 'nuevo valor'}\n",
+      "4. Busca la clave igual a 2 dentro del diccionario\n",
+      "98\n",
+      "5. Itera la clave y el valor del diccionario con un único for\n",
+      "\t4: 78\n",
+      "\t2: 98\n",
+      "\t8: 234\n",
+      "\t5: 29\n",
+      "\tnueva_clave: nuevo valor\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_12 = {4:78, 2:98, 8:234, 5:29}\n",
+    "\n",
+    "print(\"1. Crea una lista ordenada ascendente con las claves del diccionario\")\n",
+    "#Ordeno usando el metodo sort de la lista\n",
+    "key_list = list(ejer_12)\n",
+    "key_list.sort()\n",
+    "print(key_list)\n",
+    "\n",
+    "print(\"2. Crea otra lista ordenada descendente con los valores\")\n",
+    "#Ordeno usando la función built-in sorted\n",
+    "value_list=sorted(ejer_12.values(), reverse=True)\n",
+    "print(value_list)\n",
+    "\n",
+    "print(\"3. Añade una nueva clave/valor\")\n",
+    "ejer_12[\"nueva_clave\"]=\"nuevo valor\"\n",
+    "print(ejer_12)\n",
+    "\n",
+    "print(\"4. Busca la clave igual a 2 dentro del diccionario\")\n",
+    "print(ejer_12[2])\n",
+    "\n",
+    "print(\"5. Itera la clave y el valor del diccionario con un único for\")\n",
+    "for clave, valor in ejer_12.items():\n",
+    "    print(f\"\\t{clave}: {valor}\")\n"
    ]
   },
   {
@@ -270,11 +536,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 11, 2: 22, 3: 33, 4: 44}\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_13_1 = {1: 11, 2: 22}\n",
+    "ejer_13_2 = {3: 33, 4: 44}\n",
+    "\n",
+    "ejer_13_1.update(ejer_13_2)\n",
+    "print(ejer_13_1)"
    ]
   },
   {
@@ -288,11 +566,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "165\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_14 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "suma = sum([valor if isinstance(valor, (int, float, complex)) else 0 for valor in ejer_14.values() ])\n",
+    "print(suma)"
    ]
   },
   {
@@ -306,11 +594,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19326120\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "ejer_15 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
+    "mult = 1\n",
+    "for valor in ejer_15.values():\n",
+    "    if isinstance(valor, (int, float, complex)):\n",
+    "        mult *=valor\n",
+    "print(mult)"
    ]
   },
   {
@@ -326,17 +627,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. Crea un set de tres elementos\n",
+      "{1, 10, 3}\n",
+      "2. Añade un cuarto\n",
+      "{1, 10, 3, 12}\n",
+      "3. Elimina el último elemento añadido\n",
+      "{1, 10, 3}\n",
+      "4. Elimina el elemento 10, si está presente. Usa `discard()`\n",
+      "{1, 3}\n"
+     ]
+    }
+   ],
    "source": [
-    "# AQUÍ VA VUESTRO CÓDIGO"
+    "print(\"1. Crea un set de tres elementos\")\n",
+    "set_1 = {1,10,3}\n",
+    "print(set_1)\n",
+    "\n",
+    "\n",
+    "print(\"2. Añade un cuarto\")\n",
+    "set_1.add(12)\n",
+    "print(set_1)\n",
+    "\n",
+    "\n",
+    "print(\"3. Elimina el último elemento añadido\")\n",
+    "set_1.remove(12)\n",
+    "print(set_1)\n",
+    "\n",
+    "print(\"4. Elimina el elemento 10, si está presente. Usa `discard()`\")\n",
+    "set_1.discard(10)\n",
+    "print(set_1)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -350,12 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
