Correccion-Mejoras en Ejercicios_Colecciones

--- a/1-Ramp_Up/Python/3-Colecciones/Practica/Ejercicios_Colecciones.ipynb
+++ b/1-Ramp_Up/Python/3-Colecciones/Practica/Ejercicios_Colecciones.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
     "    ejer_4[pos]=0\n",
     "    print(ejer_4)\n",
     "except:\n",
-    "    print(\"No se ha encontrado el valor\")"
+    "    print(\"No se ha encontrado el valor 45\")"
    ]
   },
   {
@@ -160,24 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n"
+      "[20, 47, 19, 29, 45, 67, 78, 90]\n"
      ]
     }
    ],
    "source": [
     "ejer_5 = [3, 20, 3, 47, 19, 3, 29, 45, 67, 78, 90, 3, 3]\n",
-    "ejer_5_2 = ejer_5.copy()\n",
-    "while 3 in ejer_5_2:\n",
-    "    pos = ejer_5_2.index(3)\n",
-    "    del ejer_5_2[pos]\n",
-    "print(ejer_5_2)"
+    "while 3 in ejer_5:\n",
+    "    ejer_5.remove(3)\n",
+    "print(ejer_5)"
    ]
   },
   {
@@ -427,16 +425,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'x': 3, 'y': 2, 'z': 1}\n",
       "{'x': 3, 'y': 2, 'z': 1}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [1, 2, 3], 'y': [1, 2], 'z': [1]}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -444,18 +451,42 @@
     "\n",
     "\"\"\"\n",
     "Lo voy a hacer de dos dos formas.\n",
-    "1- conviertiendolo directamente con el constructor de diccionarios\n",
-    "2- usando un for para recorrer la tupla. \n",
+    "1- conviertiendolo directamente con el constructor de diccionarios. Se pierden datos.\n",
+    "2- usando un for para recorrer la tupla y crear una lista por cada key \n",
     "\"\"\"\n",
     "\n",
     "dict_11 = dict(ejer_11)\n",
     "print(dict_11)\n",
     "\n",
+    "\n",
+    "\n",
+    "#habia que recuperar todos los valores.\n",
     "dict_11 = dict()\n",
-    "for tmp_tuple in ejer_11:\n",
-    "    dict_11[tmp_tuple[0]]=tmp_tuple[1]\n",
-    "print(dict_11)    \n"
+    "ejer_11 = [(\"x\", 1), (\"x\", 2), (\"x\", 3), (\"y\", 1), (\"y\", 2), (\"z\", 1)]\n",
+    "for (key, value) in ejer_11:\n",
+    "    if not key in dict_11:\n",
+    "        dict_11[key]=list()\n",
+    "    dict_11[key].append(value)\n",
+    "dict_11"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [1, 2, 3], 'y': [1, 2], 'z': [1]}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "attachments": {},
@@ -507,7 +538,7 @@
     "print(key_list)\n",
     "\n",
     "print(\"2. Crea otra lista ordenada descendente con los valores\")\n",
-    "#Ordeno usando la función built-in sorted\n",
+    "#Ordeno usando la función built-in sorted en vez del metodo sort de la lita\n",
     "value_list=sorted(ejer_12.values(), reverse=True)\n",
     "print(value_list)\n",
     "\n",
@@ -566,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +610,7 @@
    ],
    "source": [
     "ejer_14 = {1: 11, 2: 22, 3: 33, 4: 44, 5: 55}\n",
-    "suma = sum([valor if isinstance(valor, (int, float, complex)) else 0 for valor in ejer_14.values() ])\n",
+    "suma = sum([valor for valor in ejer_14.values() if isinstance(valor, (int, float, complex))])\n",
     "print(suma)"
    ]
   },
